changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Allow other archetypes than fingers to be given as trophies in arena battles.
In order to do that, the battleground should have other_arch set to the
archetype to be generated.  If no other_arch is set, then fingers will be
generated as before.  Also, the trophies will have their value, type and
material set to 0 so that they cannot be used nor destroyed.
 include/sproto.h
 server/attack.c
 server/disease.c
 server/pets.c
 server/player.c
 server/spell_util.c
Raphael Quinet 2008-07-28

lib/smooth: updated by 'make collect' after Ryo's changes to the archetypes.
Raphael Quinet 2008-07-28

plugins/*/Makefile.am:  Remove  -Xlinker -export-dynamic -Xlinker -Bsymbolic
    from extra LDFLAGS.  Those are gnu specific linker options which cause
    the plugins to fail to compile when not using gld. I've tested the build
    without those options with gld on linux, and all works fine, so not sure
    if those are still needed - in theory, libtool should cover that.  If
    those options are still needed, configure.ac should get updated with a
    a better test.
MSW 2008-07-24

Automatic style fix: replace "foo* bar" by "foo *bar", remove extra spaces
inside parentheses, etc.  This was done after an analysis of the code revealed
that less than 20% of the pointer declarations were using the other style.
Same for the parentheses.  Having a consistent style in all files should make
it a bit easier to maintain the code.
 common/anim.c
 common/arch.c
 common/button.c
 common/dialog.c
 common/friend.c
 common/glue.c
 common/holy.c
 common/image.c
 common/init.c
 common/item.c