@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+If an object of type CHECK_INV blocks movement (e.g. move_block all) and if
+it contains a message, then display that message to those who are blocked.
+This allows the inventory checkers to behave a bit like locked doors.
+ common/map.c
+Raphael Quinet 2008-07-31
+
 Allow other archetypes than fingers to be given as trophies in arena battles.
 In order to do that, the battleground should have other_arch set to the
 archetype to be generated.  If no other_arch is set, then fingers will be
